deployments/kubernetes/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-worker
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: blog-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blog-worker
        app.kubernetes.io/component: worker
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: worker
          image: blog-backend
          command: ["worker"]
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: blog-worker
