deployments/kubernetes/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-frontend
spec:
  selector:
    app.kubernetes.io/name: blog-frontend
  ports:
    - name: http
      port: 3001
      targetPort: http
